fixed jumping btns for search

--- a/src/app/features/staffs/containers/staffs-creation/staffs-creation.component.scss
+++ b/src/app/features/staffs/containers/staffs-creation/staffs-creation.component.scss
@@ -353,7 +353,7 @@ edu-modal-v2.complete ::ng-deep .modal__btn {
 // }
 
 .search__btn:active {
-  top: 6px;
+  // top: 6px;
 }
 .search__btn:focus {
   outline: none;
