--- a/src/app/features/students/containers/students-creation/students-creation.component.scss
+++ b/src/app/features/students/containers/students-creation/students-creation.component.scss
@@ -352,7 +352,7 @@ body {
 // }
 
 .search__btn:active {
-  top: 6px;
+  // top: 6px;
 }
 .search__btn:focus {
   outline: none;
